<resources>
    <string name="app_name">ProyectoPIT</string>
    <string name="nombre_app">Mi Salud</string>
    <string name="slogan_screensplah">Seguimiento de tu Presión Arterial</string>
    <string name="descripcion">Mi Salud logo</string>


    <!-- VENTANA LOGIN -->
    <string name="mensajeBienvenida">BIENVENIDO A MI SALUD APP</string>
    <string name="debajoBienvenida">Ingresa para continuar</string>
    <string name="hint_usuario">Usuario</string>
    <string name="hint_contraseña">Contraseña</string>
    <string name="olvidarContraseña">HE OLVIDADO MI CONTRASEÑA</string>
    <string name="ingresar">Ingresar</string>
    <string name="Registrate">Registrate</string>

    <!-- Ventana Registro -->
    <string name="bienvenida">Bienvenido</string>
    <string name="contenido">Registrate Para Ingresar</string>
    <string name="hint_nombres">Nombres</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_Celular">Celular</string>
    <string name="go">Registrarme</string>
    <string name="tengoCuenta">Tengo una Cuenta</string>

    <!-- Ventana datos -->
    <string name="informacion">Informacion</string>
    <string name="jonathan">Jonathan Meriño</string>
    <string name="fecha">Fecha</string>
    <string name="hora">Hora</string>
    <string name="añadir">Añadir</string>


    <string name="exitoso">Registro Exitoso</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
