<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/linearLayout"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".SingUp"
    android:padding="10dp"
    android:background="#fff">
    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/descripcion"
        android:transitionName="logo_image"
        android:src="@drawable/icono"
       />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bienvenida"
        android:textSize="40sp"
        android:fontFamily="@font/fredoka_one"
        android:transitionName="logo_text"
        android:layout_marginTop="-5sp"
        android:textColor="#000"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contenido"
        android:transitionName="logo_desc"
        android:textSize="18sp"
        android:fontFamily="@font/antic"/>
    <LinearLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:transitionName="username_tran"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/reg_nombres"
        android:layout_height="wrap_content"
        android:hint="@string/hint_nombres"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reg_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:transitionName="username_tran"
            android:hint="@string/hint_usuario"
            app:counterEnabled="true"
            app:counterMaxLength="15"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reg_email"
            android:layout_width="match_parent"
            android:transitionName="password_tran"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reg_celular"
            android:transitionName="password_tran"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_Celular"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reg_contrasena"
            android:transitionName="password_tran"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_contraseña"
            app:passwordToggleEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_registro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="registroUsuario"
        android:text="@string/go"
        android:transitionName="button_tran" />
    <Button
        android:id="@+id/btn_tengo_cuenta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tengoCuenta"
        android:transitionName="login_singup_tran"
        style="@style/Botones"/>




</LinearLayout>